move up/down working

--- a/src/zypr-generic/frontend/Frontend1.css
+++ b/src/zypr-generic/frontend/Frontend1.css
@@ -4,6 +4,12 @@
     display: inline;
 }
 
+/* node cursor */
+
+.node-cursor {
+    box-shadow: 0 0 0 1px black;
+}
+
 /* node query */
 
 .node-query-replace {
