checkpoint, but probably need better abstraction over both expressions and zippers at the same time

--- a/src/zypr-generic/frontend/Frontend1.css
+++ b/src/zypr-generic/frontend/Frontend1.css
@@ -10,6 +10,18 @@
     box-shadow: 0 0 0 1px black;
 }
 
+/* node select */
+
+.node-select-top {
+    background-color: rgb(209, 209, 255);
+    box-shadow: 0 0 0 1px black;
+}
+
+.node-select-bot {
+    background-color: white;
+    box-shadow: 0 0 0 1px black;
+}
+
 /* node query */
 
 .node-query-replace {
