--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,10 @@ body {}
 /* editor */
 
 .editor {
-  /* width: 100vw; */
-  /* min-height: 100vh; */
-  box-shadow: 0 0 0 1px black;
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
+  /* width: 500px;
+  height: 500px; */
   line-height: 1.2rem;
 
   overflow: scroll;
@@ -22,6 +21,9 @@ body {}
   font-family: monospace;
   font-size: 12pt;
   /* line-height: 15pt; */
+
+  background-color: rgb(216, 200, 192);
+  ;
 }
 
 .editor-inner {
