things working pretty well with simple language!

--- a/src/zypr-generic/frontend/Frontend1.css
+++ b/src/zypr-generic/frontend/Frontend1.css
@@ -65,7 +65,9 @@
 
 .node-query-invalid {}
 
-.node-query-invalid-string {}
+.node-query-invalid-string {
+    background-color: rgb(255, 69, 69);
+}
 
 .node-query-invalid-exp {}
 
