--- a/src/zypr-generic/frontend/Frontend1.css
+++ b/src/zypr-generic/frontend/Frontend1.css
@@ -63,20 +63,16 @@
 
 /* node query */
 
-.node-query-replace {
-    /* border-left: 2px solid black;
-    border-right: 2px solid black; */
-    /* box-shadow: -2px 0 0 0 black, 2px 0 0 0 black; */
-    box-shadow: 0 0 0 2px black;
-}
+.node-query-replace-new {
+    padding-right: 0.2rem;
 
-.node-query-replace-exp-new {
     box-shadow: 0 0 0 2px black;
     background-color: rgb(255, 197, 89);
 }
 
 
-.node-query-replace-exp-old>.node {
+.node-query-replace-old {
+    padding-left: -0.2rem;
     box-shadow: 0 0 0 2px black;
     background-color: rgb(186, 186, 186);
 }
@@ -86,7 +82,8 @@
     background-color: rgb(255, 197, 89);
 }
 
-.node-query-insert-bot>.node {
+.node-query-insert-bot {
+    box-shadow: 0 0 0 2px black;
     background-color: white;
 }
 
