--- a/src/zypr-generic/frontend/Frontend2.css
+++ b/src/zypr-generic/frontend/Frontend2.css
@@ -11,33 +11,27 @@
 /* node cursor */
 
 .node-cursor {
-  /* border-left: 2px solid black;
-  border-right: 2px solid black; */
-  /* box-shadow: -2px 0 0 0 black, 2px 0 0 0 black; */
-  /* background-color: red; */
-  box-shadow: 0 0 0 2px black;
+  box-shadow: -2px 0 0 0 black, 2px 0 0 0 black;
+  border-radius: 0.2rem;
   background-color: white;
 }
 
-/* .node-seleable-top > .node-cursor {
-  color: red;
-} */
-
 .node-cursorable:hover {
-  box-shadow: 0 0 0 2px gray;
+  /* box-shadow: 0 0 0 2px purple; */
+  box-shadow: -2px 0 0 0 purple, 2px 0 0 0 purple;
+  border-radius: 0.2rem;
 }
 
 .node-cursorable:hover>.node-cursorable:hover {
-  background-color: red;
+  box-shadow: -2px 0 0 0 red, 2px 0 0 0 red;
+  border-radius: 0.2rem;
 }
 
 /* node select */
 
 .node-select-top {
-  /* border-left: 2px solid black;
-  border-right: 2px solid black; */
-  /* box-shadow: -2px 0 0 0 black, 2px 0 0 0 black; */
-  box-shadow: 0 0 0 2px black;
+  box-shadow: -2px 0 0 0 black, 2px 0 0 0 black;
+  border-radius: 0.2rem;
   background-color: rgb(211, 211, 255);
 }
 
@@ -46,10 +40,8 @@
 }
 
 .node-select-bot {
-  /* border-left: 2px solid black;
-  border-right: 2px solid black; */
-  /* box-shadow: -2px 0 0 0 black, 2px 0 0 0 black; */
-  box-shadow: 0 0 0 2px black;
+  box-shadow: -2px 0 0 0 black, 2px 0 0 0 black;
+  border-radius: 0.2rem;
   background-color: white;
 }
 
@@ -59,45 +51,51 @@
 }
 
 .node-selectable-top {
-  /* background-color: rgb(211, 211, 255); */
-  box-shadow: 0 0 0 2px gray;
+  box-shadow: -2px 0 0 0 purple, 2px 0 0 0 purple;
+  border-radius: 0.2rem;
   background-color: rgb(211, 211, 255);
 }
 
 .node-selectable-bot {
-  /* background-color: rgb(211, 211, 255); */
-  box-shadow: 0 0 0 2px gray;
+  box-shadow: -2px 0 0 0 purple, 2px 0 0 0 purple;
+  border-radius: 0.2rem;
   background-color: white;
 }
 
 /* node query */
 
 .node-query-replace-new {
-  padding-right: 0.2rem;
+  /* padding-right: 0.2rem; */
+  margin-right: 0.2rem;
 
-  box-shadow: 0 0 0 2px black;
+  box-shadow: -2px 0 0 0 black, 2px 0 0 0 black;
+  border-radius: 0.2rem;
   background-color: rgb(255, 197, 89);
 }
 
 
 .node-query-replace-old {
-  padding-left: -0.2rem;
-  box-shadow: 0 0 0 2px black;
+  /* padding-left: -0.2rem; */
+  box-shadow: -2px 0 0 0 black, 2px 0 0 0 black;
+  border-radius: 0.2rem;
   background-color: rgb(186, 186, 186);
 }
 
 .node-query-insert-top {
-  box-shadow: 0 0 0 2px black;
+  box-shadow: -2px 0 0 0 black, 2px 0 0 0 black;
+  border-radius: 0.2rem;
   background-color: rgb(255, 197, 89);
 }
 
 .node-query-insert-bot {
-  box-shadow: 0 0 0 2px black;
+  box-shadow: -2px 0 0 0 black, 2px 0 0 0 black;
+  border-radius: 0.2rem;
   background-color: white;
 }
 
 .node-query-insert-bot>.node-select-top {
-  box-shadow: 0 0 0 2px black;
+  box-shadow: -2px 0 0 0 black, 2px 0 0 0 black;
+  border-radius: 0.2rem;
   /* background-color: rgb(211, 211, 255); */
   background-color: rgb(186, 186, 186);
 }
